--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,11 +9,6 @@
 @import url('./header.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
 
@@ -22,4 +17,132 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5em;
+  letter-spacing: 0.64px;
+}
+
+.form-inline {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+.form-control {
+  width: 272px;
+  padding: 8px 16px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 1.5em;
+  letter-spacing: 0.64px;
+}
+
+.form-control::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5em;
+  letter-spacing: 0.64px;
+}
+
+.form-control:active {
+  border: 1px solid #4e75ff;
+  outline: none;
+}
+
+.btn {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5em;
+  letter-spacing: 0.64px;
+}
+
+.btn-primary {
+  background-color: #4E75FF;
+  color: #fff;
+}
+
+.btn:hover {
+  background-color: #6c8cff;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 32px;
+  list-style: none;
+  justify-content: center;
+  gap: 24px;
+}
+
+.gallery-item {
+  border: 1px solid #808080;
+}
+
+.gallery-image {
+  width: 360px;
+  height: 200px;
+}
+
+.gallery-text {
+  padding: 0 16px;
+  display: flex;
+  justify-content: center;
+  gap: 28px;
+  border-radius: 4px;
+  font-size: 12px;
+  margin-top: 4px;
+}
+
+.text-block {
+  display: flex;
+  flex-direction: column;
+  font-weight: 600;
+  line-height: 16px;
+  letter-spacing: 0.04em;
+  text-align: center;
+}
+
+.text-value {
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  text-align: center;
+}
+
+.loader {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 0 rgba(71, 75, 255, 0.5);
+  background: #474bff;
+  background-position: 0px 120px;
+  animation: pulse-c6zlskmd 1s infinite;
+}
+
+
+@keyframes pulse-c6zlskmd {
+  100% {
+    box-shadow: 0 0 0 33.6px #0000;
+  }
 }
