--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,144 +5,182 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
 :root {
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+
   color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  margin: 16px;
+  max-width: 1440px;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Montserrat;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5em;
-  letter-spacing: 0.64px;
-}
-
-.form-inline {
+.input-search-form {
   display: flex;
-  justify-content: center;
-  align-items: center;
   gap: 8px;
+  justify-content: center;
+  margin-bottom: 32px;
 }
 
-.form-control {
+input {
+  box-sizing: border-box;
   width: 272px;
-  padding: 8px 16px;
+  height: 40px;
   border: 1px solid #808080;
   border-radius: 4px;
-  font-size: 16px;
-  line-height: 1.5em;
-  letter-spacing: 0.64px;
-}
-
-.form-control::placeholder {
+  padding-left: 16px;
+  font-family: inherit;
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.5em;
+  line-height: 1.5;
   letter-spacing: 0.64px;
 }
 
-.form-control:active {
-  border: 1px solid #4e75ff;
-  outline: none;
+input:hover {
+  border: 1px solid #000000;
 }
 
-.btn {
-  padding: 8px 16px;
+button {
+  font-family: inherit;
   border: none;
+  width: 91px;
+  height: 40px;
   border-radius: 8px;
-  cursor: pointer;
-  font-weight: 500;
+  background-color: #4e75ff;
+  color: #ffffff;
   font-size: 16px;
-  line-height: 1.5em;
+  font-weight: 500;
+  line-height: 1.5;
   letter-spacing: 0.64px;
+  margin-left: 4px;
 }
 
-.btn-primary {
-  background-color: #4E75FF;
-  color: #fff;
-}
-
-.btn:hover {
+button:hover {
   background-color: #6c8cff;
 }
 
-.gallery {
+.container {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 32px;
-  list-style: none;
   justify-content: center;
+  max-width: 1128px;
+  margin: 0 auto;
+}
+
+.gallery {
+  list-style-type: none;
+  padding-left: 0;
+  display: flex;
+  flex-wrap: wrap;
   gap: 24px;
+  row-gap: 24px;
 }
 
 .gallery-item {
+  box-sizing: border-box;
   border: 1px solid #808080;
+  border-radius: 8px;
+  overflow: hidden;
+  width: 360px;
+  height: 200px;
+  transition: transform 250ms ease-in-out;
 }
 
 .gallery-image {
-  width: 360px;
-  height: 200px;
+  object-fit: cover;
 }
 
-.gallery-text {
-  padding: 0 16px;
+.gallery-image:hover {
+  cursor: zoom-in;
+}
+
+.gallery-item:hover {
+  transform: scale(1.04);
+  transition: transform 250ms ease-in-out;
+}
+
+.parameters-block {
   display: flex;
   justify-content: center;
   gap: 28px;
-  border-radius: 4px;
-  font-size: 12px;
-  margin-top: 4px;
+  padding-top: 2px;
 }
 
-.text-block {
+.parameter {
   display: flex;
   flex-direction: column;
-  font-weight: 600;
-  line-height: 16px;
-  letter-spacing: 0.04em;
-  text-align: center;
+  align-items: center;
 }
 
-.text-value {
+.title {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 2;
+  letter-spacing: 0.48px;
+  color: #2e2f42;
+}
+
+.amount {
+  font-size: 12px;
   font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.04em;
-  text-align: center;
+  line-height: 1.33;
+  letter-spacing: 0.48px;
+  color: #2e2f42;
 }
 
 .loader {
-  display: none;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 120px;
-  height: 120px;
+  width: 48px;
+  height: 48px;
+  border: 3px solid #fff;
   border-radius: 50%;
-  box-shadow: 0 0 0 0 rgba(71, 75, 255, 0.5);
-  background: #474bff;
-  background-position: 0px 120px;
-  animation: pulse-c6zlskmd 1s infinite;
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 }
 
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 3px solid;
+  border-color: #ff3d00 transparent;
+}
 
-@keyframes pulse-c6zlskmd {
-  100% {
-    box-shadow: 0 0 0 33.6px #0000;
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
   }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.is-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
